--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h2>About Me</h2>
                     <p>Hi, 
 I’m Jestin — a self-taught, passionate beginner turning everyday stories into timeless memories.
-Whether it’s laughter in the streets or quiet, emotional moments, I’m here to capture it all — just the way it felt</p>
+Whether it’s laughter in the streets or quiet emotional moments, I’m here to capture it all — just the way it felt.</p>
                     <p></p>
                     <div class="about-stats">
                         <div class="stat">
@@ -166,13 +166,13 @@ Whether it’s laughter in the streets or quiet, emotional moments, I’m here t
                         <p>Candid moments</p>
                     </div>
                 </div>
-                 <div class="portfolio-item" data-category="Unscripted">
+                <!--- <div class="portfolio-item" data-category="Unscripted">
                     <img src="cand.jpg" alt="mountain 1">
                     <div class="portfolio-overlay">
                         <h3>Nature's growth</h3>
                         <p>Macro Photography</p>
                     </div>
-                </div>
+                </div>-->
            <section id="wedding">
                 <h2>Pre-Wedding Photography</h2>
                 <div class="portfolio-item" data-category="events">
@@ -321,7 +321,7 @@ Whether it’s laughter in the streets or quiet, emotional moments, I’m here t
                 <p>Capturing life's beautiful moments, 
                     <br>one shot at a time.</p>
                 <div class="social-links">
-                    <a href="https://www.instagram.com/jestinjoseph?igsh=MWk3ZXBtdmNzMW1xMQ=="><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/_capture_the_momentzz_?igsh=c2psaXNxd25vZmw3"><i class="fab fa-instagram"></i></a>
                 <p>|Follow me on intsagram|</p>
                 </div>
             </div>
